<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_with"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textSize="@dimen/twenty_dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/small_logo"
                app:srcCompat="@drawable/logo_small" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to_continue"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fifteen_dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/enter_your_name"
                android:inputType="text"
                android:padding="@dimen/fifteen_dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:autofillHints="" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fifteen_dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/enter_mobile_number"
                android:inputType="textPassword"
                android:padding="@dimen/fifteen_dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:autofillHints="" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fifteen_dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/enter_email_address"
                android:inputType="textPassword"
                android:padding="@dimen/fifteen_dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:autofillHints="" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fifteen_dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:padding="@dimen/fifteen_dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:autofillHints="" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fifteen_dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/re_enter_your_password"
                android:inputType="textPassword"
                android:padding="@dimen/fifteen_dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:autofillHints="" />

            <EditText
                android:id="@+id/editTextTextMultiLine2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fifteen_dp"
                android:background="@drawable/edit_text_background"
                android:gravity="start|top"
                android:hint="@string/address"
                android:inputType="textMultiLine"
                android:padding="@dimen/fifteen_dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:autofillHints="" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fifteen_dp"
                android:background="@drawable/button_background"
                android:padding="@dimen/fifteen_dp"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/alreadyAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/fifteen_dp"
                android:text="@string/i_have_an_account_sign_in"
                android:textAlignment="center"
                android:textStyle="bold" />

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</LinearLayout>